--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       API_HOST: localhost
       API_PORT: 5050
-      DATA_PATH:
+      DATA_PATH: services/data
       MODEL_PATH:
       LOGGING_PATH:
       CHECKPOINT_PATH:
