finish docker compose and refactor code

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
 API_HOST=
-API_PORT=
-DATA_PATH=
-MODEL_PATH=
-LOGGING_PATH=
-CHECKPOINT_PATH=
+API_PORT=8080
+DATA_PATH=service/data
+LOGGING_PATH=service/logs
+CHECKPOINT_PATH=service/models/ckpt
